# cryptui

./: .gitignore  Makefile  README.md  config.ini.example  cryptui.py  notification.md  pyproject.toml  requirements.txt
src/cryptui/: main.py
